Wacom pressure feel is misleading / difficult to set
The two "pressure feel" sliders are misleading and difficult to set. Although the sliders allow a continuous range of firmness to be selected, only five possible values can actually be set. It isn't clear that this is the case when dragging the control and only becomes apparent after re-opening the Wacom panel (after closing g-c-c entirely, or switching to a different panel). This and other reasons make it difficult to choose a desired firmness level:
- There are no markings to indicate the positions of the discrete values actually set
- The control does not automatically snap to the actually-set value
- The selected value is not rounded to the nearest discrete value
Eraser Pressure Feel set 1px left-of-center
Value actually set (viewed after reload) is significantly different
Edited by Jason Gerecke