wacom: Snap tip/eraser pressure feel to the allowed values

And add markers for those. We only allow a total of 7 fixed pressure curve
values, so make the UI clear about it.

Closes: https://gitlab.gnome.org/GNOME/gnome-control-center/issues/483